--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -249,7 +249,15 @@
 	<!-- Blogs -->
 	<string name="blogs_button">Blogs</string>
 	<string name="blogs_feed">Feed</string>
+
 	<string name="blogs_my_blogs">My Blogs</string>
+	<string name="blogs_my_blogs_create">Create Blog</string>
+	<string name="blogs_my_blogs_label">Add new Blog</string>
+	<string name="blogs_my_blogs_create_hint_title">Blog title (cannot be changed later)</string>
+	<string name="blogs_my_blogs_create_hint_desc">A short description of your new blog</string>
+	<string name="blogs_my_blogs_create_hint_desc_explanation">Potential readers may or may not subscribe to your blog based on the content of the description.</string>
+	<string name="blogs_my_blogs_created">Blog created</string>
+
 	<string name="blogs_blog_list">Blog List</string>
 	<string name="blogs_available_blogs">Available Blogs</string>
 	<string name="blogs_drafts">Drafts</string>
