Add an activity to write blog posts
Closes #411

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -264,6 +264,9 @@
 	<string name="tag_new">NEW</string>
 	<string name="blogs_post_more">more</string>
 	<string name="blogs_write_blog_post">Write Blog Post</string>
+	<string name="blogs_write_blog_post_title_hint">Add a title (optional)</string>
+	<string name="blogs_write_blog_post_body_hint">Type your blog post here</string>
+	<string name="blogs_publish_blog_post">Publish</string>
 
 	<string name="blogs_blog_list">Blog List</string>
 	<string name="blogs_available_blogs">Available Blogs</string>
