--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -269,6 +269,11 @@
 	<string name="blogs_publish_blog_post">Publish</string>
 	<string name="blogs_blog_failed_to_load">Blog failed to load</string>
 	<string name="blogs_blog_post_failed_to_load">Blog Post failed to load</string>
+	<string name="blogs_delete_blog">Delete Blog</string>
+	<string name="blogs_delete_blog_dialog_message">Are you sure that you want to delete this Blog and all posts?\nNote that this will not delete the blog from other people\'s devices.</string>
+	<string name="blogs_delete_blog_ok">Delete Blog</string>
+	<string name="blogs_delete_blog_cancel">Keep</string>
+	<string name="blogs_remove_blog">Remove Blog</string>
 
 	<string name="blogs_blog_list">Blog List</string>
 	<string name="blogs_available_blogs">Available Blogs</string>
