Extend BlogActivity to also show individual posts
This allows for swiping left/right to read other posts by using
a ViewPager.

This hasn't been done as a separate activity, but with
fragments, so both can share the `BlogPersistentData` without
needing to reload it.

Closes #428

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -267,6 +267,8 @@
 	<string name="blogs_write_blog_post_title_hint">Add a title (optional)</string>
 	<string name="blogs_write_blog_post_body_hint">Type your blog post here</string>
 	<string name="blogs_publish_blog_post">Publish</string>
+	<string name="blogs_blog_failed_to_load">Blog failed to load</string>
+	<string name="blogs_blog_post_failed_to_load">Blog Post failed to load</string>
 
 	<string name="blogs_blog_list">Blog List</string>
 	<string name="blogs_available_blogs">Available Blogs</string>
