--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -36,6 +36,7 @@
 	<string name="contact_list_button">Contacts</string>
 	<string name="delete_contact">Delete contact</string>
 	<string name="contact_deleted_toast">Contact deleted</string>
+	<string name="contact_deletion_failed_toast">Failed to delete contact</string>
 	<string name="forums_button">Forums</string>
 	<string name="settings_button">Settings</string>
 	<string name="sign_out_button">Sign Out</string>
