Combined Blog Feed
This commit addes a combined blog feed that shows all posts of all
subscribed blogs in the order the blog posts have been received.

For now, this commit also hides other blog functionality like adding
additional blogs and browsing individual blogs.

Closes #417

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -247,7 +247,7 @@
 	<string name="progress_title_please_wait">Please wait..</string>
 
 	<!-- Blogs -->
-	<string name="blogs_button">Blogs</string>
+	<string name="blogs_button">Micro Blogs</string>
 	<string name="blogs_feed">Feed</string>
 
 	<string name="blogs_my_blogs">My Blogs</string>
@@ -267,8 +267,12 @@
 	<string name="blogs_write_blog_post_title_hint">Add a title (optional)</string>
 	<string name="blogs_write_blog_post_body_hint">Type your blog post here</string>
 	<string name="blogs_publish_blog_post">Publish</string>
+	<string name="blogs_blog_post_created">Blog Post Created</string>
+	<string name="blogs_blog_post_received">New Blog Post Received</string>
+	<string name="blogs_blog_post_scroll_to">Scroll To</string>
 	<string name="blogs_blog_failed_to_load">Blog failed to load</string>
 	<string name="blogs_blog_post_failed_to_load">Blog Post failed to load</string>
+	<string name="blogs_feed_empty_state">This is the global blog feed.\n\nIt looks like nobody blogged anything, yet.\n\nBe the first and tap the pen icon to write a new blog post.</string>
 	<string name="blogs_delete_blog">Delete Blog</string>
 	<string name="blogs_delete_blog_dialog_message">Are you sure that you want to delete this Blog and all posts?\nNote that this will not delete the blog from other people\'s devices.</string>
 	<string name="blogs_delete_blog_ok">Delete Blog</string>
