--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -111,7 +111,7 @@
 	<string name="identity_created_toast">Identity created</string>
 	<string name="forum_post_hint">Type forum post</string>
 	<string name="forum_invitations_title">Forum Invitations</string>
-	<string name="forum_invitation_exists">You accepted an invitation for this forum earlier, but you can accept more to strengthen the communication network of this forum.</string>
+	<string name="forum_invitation_exists">You accepted an invitation to this forum already. Accepting more invitations will grow and strengthen the communication in the forum.</string>
 	<string name="forum_joined_toast">Joined Forum</string>
 	<string name="forum_declined_toast">Forum Invitation Declined</string>
 	<string name="shared_by_format">Shared by %s</string>
