--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -277,6 +277,7 @@
 	<string name="blogs_delete_blog_dialog_message">Are you sure that you want to delete this Blog and all posts?\nNote that this will not delete the blog from other people\'s devices.</string>
 	<string name="blogs_delete_blog_ok">Delete Blog</string>
 	<string name="blogs_delete_blog_cancel">Keep</string>
+	<string name="blogs_blog_deleted">Blog Deleted</string>
 	<string name="blogs_remove_blog">Remove Blog</string>
 
 	<string name="blogs_blog_list">Blog List</string>
