--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -8,6 +8,7 @@
 	<string name="describe_crash">Describe what happened</string>
 	<string name="enter_feedback">Enter your feedback</string>
 	<string name="optional_contact_email">Optional contact email</string>
+	<string name="debug_report">Debug report:</string>
 	<string name="include_debug_report">Include debug report?</string>
 	<string name="could_not_load_report_data">Could not load report data.</string>
 	<string name="dev_report_saved">Report saved. It will be sent the next time you log into Briar.</string>
