--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -11,6 +11,7 @@
 	<string name="debug_report">Debug report:</string>
 	<string name="include_debug_report">Include debug report?</string>
 	<string name="could_not_load_report_data">Could not load report data.</string>
+	<string name="send_report">Send report</string>
 	<string name="dev_report_saved">Report saved. It will be sent the next time you log into Briar.</string>
 	<string name="ongoing_notification_title">Signed into Briar</string>
 	<string name="ongoing_notification_text">Touch to open Briar.</string>
