Simple UI for Managing and Importing RSS Feeds
Closes #517

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -309,4 +309,17 @@
 	<string name="blogs_available_blogs">Available Blogs</string>
 	<string name="blogs_drafts">Drafts</string>
 
+	<!-- RSS Feeds -->
+	<string name="blogs_rss_feeds_import">Import RSS Feed</string>
+	<string name="blogs_rss_feeds_import_button">Import</string>
+	<string name="blogs_rss_feeds_import_hint">Enter the URL of the RSS feed</string>
+	<string name="blogs_rss_feeds_import_error">We are sorry! There was an error importing your feed.</string>
+	<string name="blogs_rss_feeds_manage">Manage RSS Feeds</string>
+	<string name="blogs_rss_feeds_manage_imported">Imported:</string>
+	<string name="blogs_rss_feeds_manage_author">Author:</string>
+	<string name="blogs_rss_feeds_manage_updated">Last Updated:</string>
+	<string name="blogs_rss_feeds_manage_delete_error">The feed could not be deleted!</string>
+	<string name="blogs_rss_feeds_manage_empty_state">You haven\'t imported any RSS feeds.\n\nWhy don\'t you click the plus in the top right screen corner to add your first?</string>
+	<string name="blogs_rss_feeds_manage_error">There was a problem loading your feeds. Please try again later.</string>
+
 </resources>
