Explain why forum can't be shared with contact
Closes #533

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -221,6 +221,7 @@
 	<string name="forum_new_entry_received">New forum entry</string>
 	<string name="forum_new_message_hint">New Entry</string>
 	<string name="forum_message_reply_hint">New Reply</string>
+	<string name="forum_invitation_already_sharing">Already sharing</string>
 
 	<!-- Dialogs -->
 	<string name="dialog_title_lost_password">Lost Password</string>
